// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wix: empty.har -> empty.wxr 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>

<!-- This is a WordPress eXtended RSS file generated by the \\"Free (as in Speech)\\" browser extension, as an export of your site. -->
<!-- It contains information about your site's posts, pages, comments, categories, and other content. -->
<!-- You may use this file to transfer that content from one site to another. -->
<!-- This file is not intended to serve as a complete backup of your site. -->

<!-- To import this information into a WordPress site follow these steps: -->
<!-- 1. Log in to that site as an administrator. -->
<!-- 2. Go to Tools: Import in the WordPress admin panel. -->
<!-- 3. Install the \\"WordPress\\" importer from the list. -->
<!-- 4. Activate & Run Importer. -->
<!-- 5. Upload this file using the form provided on that page. -->
<!-- 6. You will first be asked to map the authors in this export file to users -->
<!--    on the site. For each author, you may choose to map to an -->
<!--    existing user on the site or to create a new user. -->
<!-- 7. WordPress will then import each of the posts, pages, comments, categories, etc. -->
<!--    contained in this file into your site. -->

<rss version=\\"2.0\\"
	xmlns:excerpt=\\"http://wordpress.org/export/1.2/excerpt/\\"
	xmlns:content=\\"http://purl.org/rss/1.0/modules/content/\\"
	xmlns:wfw=\\"http://wellformedweb.org/CommentAPI/\\"
	xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\"
	xmlns:wp=\\"http://wordpress.org/export/1.2/\\"
>
<channel>
	<pubDate></pubDate>
	<wp:wxr_version>1.2</wp:wxr_version>
</channel>
</rss>"
`;

exports[`wix: wix-basic.har -> wix-basic.wxr 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>

<!-- This is a WordPress eXtended RSS file generated by the \\"Free (as in Speech)\\" browser extension, as an export of your site. -->
<!-- It contains information about your site's posts, pages, comments, categories, and other content. -->
<!-- You may use this file to transfer that content from one site to another. -->
<!-- This file is not intended to serve as a complete backup of your site. -->

<!-- To import this information into a WordPress site follow these steps: -->
<!-- 1. Log in to that site as an administrator. -->
<!-- 2. Go to Tools: Import in the WordPress admin panel. -->
<!-- 3. Install the \\"WordPress\\" importer from the list. -->
<!-- 4. Activate & Run Importer. -->
<!-- 5. Upload this file using the form provided on that page. -->
<!-- 6. You will first be asked to map the authors in this export file to users -->
<!--    on the site. For each author, you may choose to map to an -->
<!--    existing user on the site or to create a new user. -->
<!-- 7. WordPress will then import each of the posts, pages, comments, categories, etc. -->
<!--    contained in this file into your site. -->

<rss version=\\"2.0\\"
	xmlns:excerpt=\\"http://wordpress.org/export/1.2/excerpt/\\"
	xmlns:content=\\"http://purl.org/rss/1.0/modules/content/\\"
	xmlns:wfw=\\"http://wellformedweb.org/CommentAPI/\\"
	xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\"
	xmlns:wp=\\"http://wordpress.org/export/1.2/\\"
>
<channel>
	<title><![CDATA[mywebsite]]></title>
	<link><![CDATA[https://12345678.wixsite.com/mywebsite]]></link>
	<pubDate></pubDate>
	<wp:wxr_version>1.2</wp:wxr_version>
	<wp:base_site_url><![CDATA[https://12345678.wixsite.com/mywebsite]]></wp:base_site_url>
	<wp:base_blog_url><![CDATA[https://12345678.wixsite.com/mywebsite]]></wp:base_blog_url>
	<wp:author>
		<wp:author_login><![CDATA[admin]]></wp:author_login>
		<wp:author_display_name><![CDATA[]]></wp:author_display_name>
	</wp:author>
	<item>
		<title><![CDATA[Hello World]]></title>
		<pubDate><![CDATA[Wed, 27 Jan 2021 08:20:41 GMT]]></pubDate>
		<dc:creator><![CDATA[admin]]></dc:creator>
		<guid isPermaLink=\\"false\\"><![CDATA[6676d9d6-0318-4dcc-881f-ba6482cff48d]]></guid>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:paragraph -->
<p>This is my first entry.</p>
<!-- /wp:paragraph -->]]></content:encoded>
		<wp:post_date><![CDATA[2021-01-27 08:20:41]]></wp:post_date>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[post]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<title><![CDATA[Draft]]></title>
		<pubDate><![CDATA[]]></pubDate>
		<dc:creator><![CDATA[admin]]></dc:creator>
		<guid isPermaLink=\\"false\\"><![CDATA[1578305e-fcbe-4767-b656-72d409d27bff]]></guid>
		<description></description>
		<content:encoded><![CDATA[]]></content:encoded>
		<wp:post_date><![CDATA[]]></wp:post_date>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[draft]]></wp:status>
		<wp:post_type><![CDATA[post]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
</channel>
</rss>"
`;
